openshift.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability-demo


# *********************************************************************************
# アプリケーションのビルド
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: observability-demo
  name: hello-app
  labels:
    app: hello-app
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"hello-app-image:latest","namespace":"observability-demo"},"fieldPath":"spec.template.spec.containers[?(@.name==\"container\")].image","paused":true}]
spec:
  selector:
    matchLabels:
      app: hello-app
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-app
        app.kubernetes.io/name: hello-app
        cryostat.io/name: my-cryostat
        cryostat.io/namespace: observability-demo
        cryostat.io/java-options-var: MODULE_OPTS
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9990"
        instrumentation.opentelemetry.io/inject-java: "true"
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: container
          image: >-
            image-registry.openshift-image-registry.svc:5000/observability-demo/hello-app-image
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
            - name: management
              containerPort: 9990
              protocol: TCP
            - name: cryostat
              containerPort: 9977
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9990
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9990
          startupProbe:
            httpGet:
              path: /health/started
              port: 9990
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
  namespace: observability-demo
  labels:
    app: hello-app
spec:
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      name: web
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: management
      port: 9990
      targetPort: 9990
    - protocol: TCP
      name: cryostat
      port: 9977
      targetPort: 9977
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-app-route
  namespace: observability-demo
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: hello-app.apps.o.chiroito.dev
  path: /
  to:
    kind: Service
    name: hello-app-service
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
  wildcardPolicy: None
---


# *********************************************************************************
# OTel Collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-minio
  namespace: observability-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-minio
  template:
    metadata:
      labels:
        app: my-minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9001
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: my-minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: my-minio
  namespace: observability-demo
spec:
  selector:
    app: my-minio
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: console
      port: 9001
      targetPort: console
---


# 参考情報

# Wildfly Operator
#apiVersion: wildfly.org/v1alpha1
#kind: WildFlyServer
#metadata:
#  name: hello-app
#  namespace: observability-demo
#  annotations:
#    sidecar.opentelemetry.io/inject: 'true'
#  labels:
#    app: jboss-eap-app
#    cryostat.io/name: cryostat-sample
#    cryostat.io/namespace: observability-demo
#spec:
#  applicationImage: 'image-registry.openshift-image-registry.svc:5000/hello-app/jboss-eap-app'
#  replicas: 1
#  livenessProbe:
#    httpGet:
#      path: /health/live
#      port: 9990
#  readinessProbe:
#    httpGet:
#      path: /health/ready
#      port: 9990
#  startupProbe:
#    httpGet:
#      path: /health/started
#      port: 9990
#  env:
#    - name: OTEL_EXPORTER_OTLP_ENDPOINT
#      value: "http://otel-collector:4318"
#    - name: OTEL_SERVICE_NAME
#      value: "hello-jakarta-service"
#    - name: JAVA_OPTS_APPEND
#      value: "-javaagent:/opt/server/otel/opentelemetry-javaagent.jar"
#---

# GrafanaからLokiを見るときの権限
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRoleBinding
#metadata:
#  name: my-grafana-read-application-logs
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: ClusterRole
#  name: cluster-logging-application-view
#subjects:
#  - kind: ServiceAccount
#    name: my-loki-reader
#    namespace: observability-demo
#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRole
#metadata:
#  name: my-grafana-pods-log-reader
#rules:
#  - apiGroups: [""]
#    resources:
#      - pods
#      - pods/log
#      - namespaces
#    verbs:
#      - get
#      - list
#      - watch
#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRoleBinding
#metadata:
#  name: my-grafana-pods-log-reader
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: ClusterRole
#  name: my-grafana-pods-log-reader
#subjects:
#  - kind: ServiceAccount
#    name: my-loki-reader
#    namespace: observability-demo
#---


# モニタリング
---
#apiVersion: monitoring.coreos.com/v1
#kind: PodMonitor
#metadata:
#  name: hello-app
#  namespace: observability-demo
#  labels:
#    app.kubernetes.io/name: hello-app
#spec:
#  namespaceSelector:
#    matchNames:
#      - hello-app
#  selector:
#    matchLabels:
#      app.kubernetes.io/name: hello-app
#  podMetricsEndpoints:
#    - port: management
#      path: /metrics
#      scheme: http
#      interval: 15s
#---
#apiVersion: monitoring.coreos.com/v1
#kind: ServiceMonitor
#metadata:
#  name: hello-app
#  namespace: hello-app
#spec:
#  endpoints:
#    - interval: 15s
#      port: management
#      scheme: http
#  selector:
#    matchLabels:
#      app: hello-app
